# bayesian_non_parametric

./: .Rhistory  .gitignore  README.md  X_test.csv  X_train.csv  argpy.R  argpy.py  arma.py  bayes_by_backprop.py  bayesian_neural_network.py  bayesian_nowcast.py  bayesian_rbf.py  bynn.py  comp.R  comp2.R  config.R  dirichlet_bnn_process.py  dirichlet_linear_process.py  dirichlet_process.py  dlm.R  dp.py  dp2.py  dp3.py  evaluator.R  ff_test.R  gaussian_process.py  gp.py  gp2.py  gp_autoregressive_specification_sin_curve.R  gp_data.R  gp_model.stan  gp_stan.R  gpy.py  graph.py  mdn.py  mynn.py  nn.py  paper_draft.tex  planning.tex  poisson_gp.py  (+8 more)
SIR/: SIR.bi  posterior.conf  run.sh
SIR/.SIR/build_openmp_sse/: Doxyfile  Makefile  Makefile.am  Makefile.in  config.status  configure
SIR/.SIR/build_openmp_sse/autom4te.cache/: output.0  requests  traces.0  traces.1
SIR/.SIR/build_openmp_sse/src/: sample_cpu.cpp  sample_gpu.cu
SIR/.SIR/build_openmp_sse/src/.deps/: sample_cpu.Tpo
SIR/.SIR/build_openmp_sse/src/bi/.deps/: bi.Po
SIR/.SIR/build_openmp_sse/src/bi/netcdf/.deps/: InputNetCDFBuffer.Po  MCMCNetCDFBuffer.Po  ParticleFilterNetCDFBuffer.Po  SMCNetCDFBuffer.Po  SimulatorNetCDFBuffer.Po  netcdf.Po
SIR/.SIR/build_openmp_sse/src/bi/null/.deps/: InputNullBuffer.Po
SIR/.SIR/build_openmp_sse/src/model/: ModelSIR.cpp  ModelSIR.hpp
SIR/.SIR/build_openmp_sse/src/model/.deps/: ModelSIR.Po
SIR/.SIR/build_openmp_sse/src/model/action/: Action0.hpp  Action1.hpp  Action10.hpp  Action11.hpp  Action12.hpp  Action13.hpp  Action16.hpp  Action17.hpp  Action2.hpp  Action20.hpp  Action25.hpp  Action27.hpp  Action28.hpp  Action29.hpp  Action3.hpp  Action4.hpp  Action5.hpp  Action6.hpp  Action7.hpp  Action8.hpp  Action9.hpp  ActionCoord0.hpp  ActionCoord1.hpp  ActionCoord10.hpp  ActionCoord12.hpp  ActionCoord13.hpp  ActionCoord15.hpp  ActionCoord19.hpp  ActionCoord2.hpp  ActionCoord21.hpp  ActionCoord22.hpp  ActionCoord23.hpp  ActionCoord26.hpp  ActionCoord27.hpp  ActionCoord29.hpp  ActionCoord6.hpp  ActionCoord7.hpp  ActionCoord8.hpp
SIR/.SIR/build_openmp_sse/src/model/block/: Block1.hpp  Block10.hpp  Block11.hpp  Block12.hpp  Block13.hpp  Block14.hpp  Block15.hpp  Block16.hpp  Block17.hpp  Block2.hpp  Block22.hpp  Block3.hpp  Block4.hpp  Block5.hpp  Block6.hpp  Block7.hpp  Block8.hpp  Block9.hpp
SIR/.SIR/build_openmp_sse/src/model/var/: Var0.hpp  Var1.hpp  Var10.hpp  Var11.hpp  Var12.hpp  Var13.hpp  Var3.hpp  Var4.hpp  Var5.hpp  Var6.hpp  Var8.hpp  VarCoord0.hpp  VarCoord1.hpp  VarCoord10.hpp  VarCoord11.hpp  VarCoord12.hpp  VarCoord13.hpp  VarCoord2.hpp  VarCoord3.hpp  VarCoord5.hpp  VarCoord7.hpp  VarCoord8.hpp  VarGroupG.hpp
StochasticVolatility/: SIR.bi  StochasticVolatility.bi  posterior.conf
StochasticVolatility/.SIR/build_openmp_sse/: Makefile  config.status  sample  sample_cpu
StochasticVolatility/results/: posterior.nc
dengue_sj_experiments/: get_X_y_demo.R  utils.R
dengue_sj_experiments/np/: np.R
dengue_sj_experiments/sarima/: sarima-estimation-box-cox-transformation-seasonal-differencing.R  sarima-estimation-forecast-box-cox-transformation-no-differencing.R  sarima-estimation-forecast-box-cox-transformation-seasonal-differencing.R  sarima-estimation-no-transformation-no-differencing.R  sarima-estimation.R  sarima-load-predictions.R  sarima-scores-eval-predictions-box-cox-transformation-seasonal-differencing.csv  sarima-scores-eval-predictions-forecast-box-cox-transformation-no-differencing.csv  sarima-scores-eval-predictions-forecast-box-cox-transformation-seasonal-differencing.csv  sarima-scores-eval-predictions-no-transformation-no-differencing.csv  sarima-scoring-box-cox-transformation-seasonal-differencing.R  sarima-scoring-forecast-box-cox-transformation-no-differencing.R  sarima-scoring-forecast-box-cox-transformation-seasonal-differencing.R  sarima-scoring-no-transformation-no-differencing.R
dengue_sj_experiments/sarima/eval_predictions_box_cox_transformation_seasonal_differencing/: last_obs_2004-2005_week_1.csv  last_obs_2004-2005_week_10.csv  last_obs_2004-2005_week_11.csv  last_obs_2004-2005_week_12.csv  (+256 more)
dengue_sj_experiments/transform_exploration/: YJ_transform_dengue.R
dlm/: alphamodel.R  avg_temp_san_juan.csv  blob.bug  dengue_dlm.R  dlm.R  dssm.R  parse_data.py  pdlm.py  pf.py  poisson_pf.py  poisson_ssm.R  random_effects_dlm.R  rbi.R  re.bug  ssm.R  ssm2.R  ssm_pf.py  temp.csv  ukf.py
dp/: bckde_jl.jl  bkcde.py  bkcde2.py  bnn.R  bnn.py  cd.py  dp.R  dp.py  dp2.py  svgd.py  svgd_bkcde.py  vi.py
kcde/: kcde.R
pf_vi/: pf_vi_proposals.Rmd
sarima/: sarima_naive.R
scratch/: alphamodel.R  backprop_bayes.py  bayesian_lstm.py  bayesian_neural_net.py  bbb.py  blr.py  bnn.py  dppackage2.out  example_1.py  example_2.py  example_3.py  finalGPY.py  gpy.py  hers.py  kcde.py  kfas.R  last_try.py  lyme.R  mdn.py  newNp.r  nn.py  nn2.py  nn3.py  np.R  one_last_try.py  pdlm.py  rbf.py  really_final.py  results.md  sarima_test.R  semipgp.py  test.R  test.py  tf.R  untitled  vae.py  wavelet.py
ssvgd/: ssvgd.Rmd
tmp_data/: X_test.csv  y_train.csv
(+878 files in other folders)
